# text_display_steamvr_overlay

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
doc/: PROJECT.md
resources/: manifest.vrmanifest
scripts/: format.ps1  format.sh  update_third_libs.sh
src/: DashboardOverlay.h  ImGuiOverlayWindow.cpp  ImGuiOverlayWindow.h  ImGuiWindow.cpp  ImGuiWindow.h  Main.cpp  Settings.cpp  Settings.h  SubtitleOverlay.h  TcpServer.h  VrOverlay.h  VrUtils.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.h  VulkanWindow.cpp  constants.h
src/backends/: imgui_impl_openvr.cpp  imgui_impl_openvr.h
src/base/: ImGuiOverlayWindow.cpp  ImGuiOverlayWindow.h  ImGuiUtils.h  ImGuiWindow.cpp  ImGuiWindow.h  VrUtils.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.h  VulkanWindow.cpp  imgui_stdlib.cpp  imgui_stdlib.h
